[project]
name = "lora4research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "peft>=0.17.1",
    "protobuf>=6.32.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "tiktoken>=0.11.0",
    "transformers==4.55.4",
]
